[package]
name = "job-board-poll"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = { version = "*", features = ["vendored"] }
reqwest = { version = "*", features = ["blocking"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
quick-xml = "*"